added fancy add to cart button effect

--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -61,7 +61,7 @@ nav,
 
 #navToggleLabel,
 nav a {
-    padding: 1em 1.5em 0.6em 1.5em;
+    padding: 1em 1.5em 1em 1.5em;
 }
 
 nav a {
@@ -247,5 +247,9 @@ nav li img {
     }
     .homePage span {
         display: none;
+    }
+    #navToggleLabel,
+    nav a {
+        padding: 1em 1.5em 0.6em 1.5em;
     }
 }
