fixed weird form widths

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -193,6 +193,12 @@
 }
 
 @media screen and (min-width: 1400px) {
+    .registerForm {
+        max-width: 1000px;
+    }
+    .productForm {
+        max-width: 1000px;
+    }
     /* #region filter form */
     .filterForm {
         position: absolute;
