--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,6 +3,10 @@
     --darkgrey: #333;
 }
 
+@font-face { font-family: 'Oswald';
+            src: local('assets/Oswald/Oswald-VariableFont_wght.ttf');}
+
+
 
 /* #region general */
 
@@ -12,7 +16,7 @@ html {
 }
 
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Oswald', sans-serif;
     margin: 0;
     background: #e1e1e1;
     color: #384047;
