--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,9 +3,18 @@
     --darkgrey: #333;
 }
 
-@font-face { font-family: 'Oswald';
-            src: local('assets/Oswald/Oswald-VariableFont_wght.ttf');}
-
+@font-face {
+    font-family: 'Oswald', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    /* IE9 Compat Modes */
+    src: local(''), url('assets/fonts/oswald-v35-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('assets/fonts/oswald-v35-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('assets/fonts/oswald-v35-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('assets/fonts/oswald-v35-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('assets/fonts/oswald-v35-latin-regular.svg#Oswald') format('svg');
+    /* Legacy iOS */
+}
 
 
 /* #region general */
@@ -16,7 +25,7 @@ html {
 }
 
 body {
-    font-family: 'Oswald', sans-serif;
+    /* font-family: 'Oswald'; */
     margin: 0;
     background: #e1e1e1;
     color: #384047;
