--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-    /* font-family: 'Oswald'; */
+    font-family: 'Oswald', sans-serif;
     margin: 0;
     background: #e1e1e1;
     color: #384047;
