--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,16 +4,20 @@
     --fontColor: #384047;
 }
 
+
+/* oswald-regular - latin */
+
 @font-face {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 250;
+    src: url('../fonts/oswald/oswald-v35-latin-regular.woff2');
     /* IE9 Compat Modes */
-    src: local(''), url('assets/fonts/oswald-v35-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('assets/fonts/oswald-v35-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('assets/fonts/oswald-v35-latin-regular.woff') format('woff'), /* Modern Browsers */
-    url('assets/fonts/oswald-v35-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('assets/fonts/oswald-v35-latin-regular.svg#Oswald') format('svg');
+    src: local(''), url('../fonts/oswald/oswald-v35-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/oswald/oswald-v35-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/oswald/oswald-v35-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/oswald/oswald-v35-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/oswald/oswald-v35-latin-regular.svg#Oswald') format('svg');
     /* Legacy iOS */
 }
 
