--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -9,6 +9,8 @@
         display: inline-block;
         position: relative;
         height: 230px;
+        top: 12px;
+
     }
     .logo2 {
         display: none;
