fixed pricing and ajax bug in shopping Cart

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -483,8 +483,7 @@ form textarea {
     min-height: 150px;
 }
 
-form input[type=submit],
-{
+form input[type=submit] {
     color: #FFF;
     background-color: var(--orange);
     border-radius: 5px;
