--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,11 +13,15 @@
     font-weight: 250;
     src: url('../fonts/oswald/oswald-v35-latin-regular.woff2');
     /* IE9 Compat Modes */
-    src: local(''), url('../fonts/oswald/oswald-v35-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/oswald/oswald-v35-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/oswald/oswald-v35-latin-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/oswald/oswald-v35-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../fonts/oswald/oswald-v35-latin-regular.svg#Oswald') format('svg');
+    src: local(''), url('../fonts/oswald/oswald-v35-latin-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('../fonts/oswald/oswald-v35-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/oswald/oswald-v35-latin-regular.woff') format('woff'),
+        /* Modern Browsers */
+        url('../fonts/oswald/oswald-v35-latin-regular.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('../fonts/oswald/oswald-v35-latin-regular.svg#Oswald') format('svg');
     /* Legacy iOS */
 }
 
@@ -654,7 +658,7 @@ form label {
     display: grid;
     width: 100%;
     grid-template-columns: 1fr;
-    grid-template-areas: "search" "sidebar" "content" "pager" "loadMore";
+    grid-template-areas: "search""sidebar""content""pager""loadMore";
 }
 
 .productBoxWrapper .sideBar {
@@ -1173,7 +1177,7 @@ form label {
     padding: 5px;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas: "heading" "content" "total" "notFound"
+    grid-template-areas: "heading""content""total""notFound"
 }
 
 .shoppingCart button {
@@ -1437,3 +1441,8 @@ form label {
 
 
 /* #endregion */
+
+/* used to hide content that should be only visible, if javascript is enabled */
+.jsRelevant {
+    display: none;
+}
